--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                 <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-                <a class="header-link link" href="./portfolio.html">Portfolio</a>
+                <a class="header-link current link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="header-item">
                 <a class="header-link link" href="">Contacts</a>
@@ -67,59 +67,104 @@
                 </li>
             </ul>
             <ul class="about-list list">
-                <li class="about-title-text">
+                <li class="about-title-text ">
+                    <div class="wrapper">
                     <a class="link link-shadow" href=""><img src="./images/s1.jpg" alt="app" width="360" height="300" class="img-portfolio"/>
+                     <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                        <div class="title-about-container">
                         <h2 class="title-about">Banking App Interface Concept</h2>
                         <p class="title-text">App</p></div>
                     </a>
                 </li>
                 <li class="about-title-text">
+                    <div class="wrapper">
                     <a class="link link-shadow" href=""><img src="./images/s2.jpg" alt="apps" width="360" height="300" class="img-portfolio" />
+                        <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="title-about-container">   <h2 class="title-about">Cashless Payment</h2>
                         <p class="title-text">Marketing</p> </div>
                     </a>
                 </li>
                 <li class="about-title-text">
+                    <div class="wrapper">
                     <a class="link link-shadow" href=""><img src="./images/s3.jpg" alt="apps" width="360" height="300" class="img-portfolio"/>
+                        <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="title-about-container">   <h2 class="title-about">Meditation App</h2>
                         <p class="title-text">App</p> </div>
                     </a>
                 </li>              
                 <li class="about-title-text">
+                    <div class="wrapper">
                     <a class="link link-shadow" href="">
                         <img src="./images/s4.jpg" alt="marketing" width="360" height="300" class="img-portfolio"/>
+                        <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="title-about-container">   <h2 class="title-about">Taxi Service</h2>
                         <p class="title-text">Marketing</p> </div>
                     </a>
                 </li>
                 <li class="about-title-text">
+                    <div class="wrapper">
                     <a class="link link-shadow" href="">
                         <img src="./images/s5.jpg" alt="marketing" width="360" height="300" class="img-portfolio"/>
+                        <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="title-about-container">    <h2 class="title-about">Screen Illustrations</h2>
                         <p class="title-text">Design</p> </div>
                     </a>
                 </li>
                 <li class="about-title-text"> 
+                    <div class="wrapper">
                     <a class="link link-shadow" href=""><img src="./images/s6.jpg" alt="marketing" width="360" height="300" class="img-portfolio"/>
+                        <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="title-about-container">       <h2 class="title-about">Online Courses</h2>
                         <p class="title-text">Marketing</p> </div>
                     </a>
                 </li>
                 <li class="about-title-text">
+                    <div class="wrapper">
                     <a class="link link-shadow" href=""><img src="./images/s7.jpg" alt="sites" width="360" height="300" class="img-portfolio"/>
+                        <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="title-about-container">        <h2 class="title-about">Instagram Stories Concept</h2>
                         <p class="title-text">Design</p> </div>
                     </a>
                 </li>
                 <li class="about-title-text">
+                    <div class="wrapper">
                     <a class="link link-shadow" href=""><img src="./images/s8.jpg" alt="sites" width="360" height="300" class="img-portfolio"/>
+                        <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="title-about-container">        <h2 class="title-about">Organic Food</h2>
                         <p class="title-text">Web Site</p> </div>
                     </a>
                 </li>
                 <li class="about-title-text">
+                    <div class="wrapper">
                     <a class="link link-shadow" href=""><img src="./images/s9.jpg" alt="sites" width="360" height="300" class="img-portfolio"/>
+                        <p class="overlay">14 Stylish and User-Friendly 
+                            App Design Concepts · Task Manager App · Calorie Tracker App
+                             · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="title-about-container">     <h2 class="title-about">Fresh Coffee</h2>
                         <p class="title-text">Web Site</p> </div>
                     </a>
