--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
       ">
     <link rel="stylesheet" href="./css/styles.css"/>
   </head>
-  <body>
+  <body >
     <header class="header">
       <div class="container header-container">
       <nav class="header-nav">
         <a class="logo link" href="./index.html">Web<span class="header-logo">Studio</span></a>
-        <ul class=" header-inf ">
+      
+        <ul class=" header-inf">
           <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
+            <a class="header-link current link  " href="./index.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
+            <a class="header-link link " href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -47,7 +48,14 @@
       <div class="container">
       <h1 class="solutions-title"> Effective Solutions
         for Your Business</h1>
-      <button class="solutions-button" type="button">Order Service</button>
+      <button data-modal-open class="solutions-button" type="button">Order Service</button>
+    </div>
+    <div data-modal class="backdrop is-hidden">
+<div class="modal">
+<button  type="button" class="button-close" data-modal-close >
+  <svg class="modal-icon" ><use  href="./images/symbol-defs-four.svg#icon-close-black"></use></svg></button>
+
+</div>
     </div>
     </section>
  <!-- hero -->
@@ -185,5 +193,6 @@
 </div>
 </div>
 </footer>
+<script src="./js/modal.js"></script>
   </body>
   </html>
