--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <svg class="modal-icon" ><use  href="./images/symbol-defs-four.svg#icon-close-black"></use></svg></button>
 
 </div>
+<div class="modal-filed"><label for="">Free</label></div>
     </div>
     </section>
  <!-- hero -->
